--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Container for profile picture-->
         <div class="img-container">
-            <img src="asset/rikka.jpeg" alt="">
+            <img src="asset/ryoo.jfif" alt="">
         </div>
 
         <!-- Container for heading and description -->
