--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>See My Instagram Profile</p>
 <div class="hidden-button"></div>
 
-<a href="https://aniwatch.to/home" class="link-items">
+<a href="https://hianime.to/home" class="link-items">
     <div class="icon2">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-movie" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
